java
[Running] cd "/home/alejandro/Escritorio/Proyectos de java/" && javac Hello.java && java Hello
Error: no se ha encontrado el método principal en la clase Hello, defina el método principal del siguiente modo:\n   public static void main(String[] args)\nde lo contrario, se deberá ampliar una clase de aplicación JavaFX javafx.application.Application

[Done] exited with code=1 in 4.523 seconds

[Running] cd "/home/alejandro/Escritorio/Proyectos de java/" && javac Hello.java && java Hello
Error: no se ha encontrado el método principal en la clase Hello, defina el método principal del siguiente modo:\n   public static void main(String[] args)\nde lo contrario, se deberá ampliar una clase de aplicación JavaFX javafx.application.Application

[Done] exited with code=1 in 3.149 seconds

[Running] cd "/home/alejandro/Escritorio/Proyectos de java/" && javac Hello.java && java Hello
Error: no se ha encontrado el método principal en la clase Hello, defina el método principal del siguiente modo:\n   public static void main(String[] args)\nde lo contrario, se deberá ampliar una clase de aplicación JavaFX javafx.application.Application

[Done] exited with code=1 in 2.295 seconds

[Running] cd "/home/alejandro/Escritorio/Proyectos de java/" && javac Hello.java && java Hello
Hello.java:4: error: <identifier> expected
    public static void main (String{[] args) {
                                   ^
Hello.java:4: error: illegal start of expression
    public static void main (String{[] args) {
                                    ^
Hello.java:4: error: not a statement
    public static void main (String{[] args) {
                                       ^
Hello.java:4: error: ';' expected
    public static void main (String{[] args) {
                                           ^
Hello.java:8: error: reached end of file while parsing
}
 ^
5 errors

[Done] exited with code=1 in 2.062 seconds

[Running] cd "/home/alejandro/Escritorio/Proyectos de java/" && javac Hello.java && java Hello
Hola mundo!

[Done] exited with code=0 in 2.85 seconds
